--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -15,7 +15,7 @@
   "An unexpected error occurred. Please try again later.": "خطای غیرمنتظره‌ای رخ داد. لطفاً بعداً دوباره امتحان کنید.",
   "App Successfully installed": "برنامه با موفقیت نصب شد",
   "Apply and validate your database schema migrations to set up all required tables.": "مهاجرت‌های طرح پایگاه داده را اعمال و اعتبارسنجی کنید تا جداول مورد نیاز راه‌اندازی شوند.",
-  "Approve": "Approve",
+  "Approve": "تأیید",
   "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
   "At least one role must be selected": "حداقل یک نقش باید انتخاب شود",
   "Author:": "نویسنده:",
@@ -28,8 +28,8 @@
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
   "Code": "کد",
-  "Comment Approved": "Comment Approved",
-  "Comment Denied": "Comment Denied",
+  "Comment Approved": "نظر تایید شد",
+  "Comment Denied": "نظر رد شد",
   "Comments": "نظرات",
   "Confirm Password": "تأیید رمز عبور",
   "Confirm Password must be at least 6 characters": "رمز عبور تأیید شده باید حداقل ۶ کاراکتر باشد",
@@ -39,7 +39,7 @@
   "Create your first administrator account to manage your application.": "اولین حساب مدیر را برای مدیریت برنامه خود ایجاد کنید.",
   "Current Password": "رمز عبور فعلی",
   "D1 Database Connection": "اتصال پایگاه داده D1",
-  "Dark Mode": "Dark Mode",
+  "Dark Mode": "حالت تاریک",
   "Dashboard": "داشبورد",
   "Database Connection Established": "اتصال پایگاه داده برقرار شد",
   "Database Ready": "پایگاه داده آماده است",
@@ -50,7 +50,7 @@
   "Database connection is not working.": "اتصال پایگاه داده کار نمی‌کند.",
   "Database connection is working.": "اتصال پایگاه داده کار می‌کند.",
   "Date:": "تاریخ:",
-  "Deny": "Deny",
+  "Deny": "رد",
   "Description": "توضیحات",
   "Edit This page": "ویرایش این صفحه",
   "English": "انگلیسی",
@@ -69,7 +69,7 @@
   "Failed to add role": "افزودن نقش با شکست مواجه شد",
   "Failed to add roles to user": "افزودن نقش‌ها به کاربر با شکست مواجه شد",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
-  "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
+  "Failed to retrieve the newly created user": "دریافت کاربر تازه ایجاد شده با شکست مواجه شد",
   "Failed to retrieve the newly created user.": "دریافت کاربر تازه ایجاد شده با شکست مواجه شد.",
   "Finish Installing": "پایان نصب",
   "First Name": "نام",
@@ -84,25 +84,25 @@
   "Installation Complete": "نصب تکمیل شد",
   "Installation is complete. Your application is now fully configured and ready to use!": "نصب تکمیل شد. برنامه شما اکنون به‌طور کامل پیکربندی شده و آماده استفاده است!",
   "Internal Server Error": "خطای داخلی سرور",
-  "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
+  "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
   "Invalid username or password": "نام کاربری یا رمز عبور نامعتبر است",
   "It looks like your database schema has not been set up yet. Click the button below to run the required migrations and initialize your database schema.": "به نظر می‌رسد طرح پایگاه داده شما هنوز راه‌اندازی نشده است. برای اجرای مهاجرت‌های لازم و راه‌اندازی طرح پایگاه داده، روی دکمه زیر کلیک کنید.",
   "Italic": "ایتالیک",
   "Items": "آیتم‌ها",
   "Last Name": "نام خانوادگی",
   "Latest Incoming": "آخرین ورودی‌ها",
-  "Light Mode": "Light Mode",
+  "Light Mode": "حالت روشن",
   "Load Default Data": "بارگذاری داده‌های پیش‌فرض",
   "Login": "ورود",
   "Login failed": "ورود ناموفق بود",
-  "Login successful": "Login successful",
-  "Mamoochi Database  Installation": "نصب پایگاه داده Mamoochi",
+  "Login successful": "ورود موفقیت‌آمیز بود",
+  "Mamoochi Database  Installation": "نصب پایگاه داده ماموچی",
   "Manage Roles": "مدیریت نقش‌ها",
   "Manage Users": "مدیریت کاربران",
-  "Missing required fields: firstName, lastName, about, userName, password, or pub": "Missing required fields: firstName, lastName, about, userName, password, or pub",
-  "Missing required fields: userName, password, pub": "Missing required fields: userName, password, pub",
-  "Must be at least 2 characters": "Must be at least 2 characters",
-  "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
+  "Missing required fields: firstName, lastName, about, userName, password, or pub": "فیلدهای ضروری: firstName، lastName، about، userName، password یا pub وارد نشده‌اند",
+  "Missing required fields: userName, password, pub": "فیلدهای ضروری: userName، password و pub وارد نشده‌اند",
+  "Must be at least 2 characters": "باید حداقل 2 کاراکتر باشد",
+  "Must be at least 3 characters": "باید حداقل 3 کاراکتر باشد",
   "New Password": "رمز عبور جدید",
   "No Database Connection": "اتصال پایگاه داده وجود ندارد",
   "No results found": "نتیجه‌ای یافت نشد",
@@ -115,31 +115,31 @@
   "Paragraph": "پاراگراف",
   "Password": "رمز عبور",
   "Password changed successfully": "رمز عبور با موفقیت تغییر کرد",
-  "Password must be at least 6 characters": "رمز عبور باید حداقل ۶ کاراکتر باشد",
+  "Password must be at least 6 characters": "رمز عبور باید حداقل 6 کاراکتر باشد",
   "Passwords do not match": "رمزهای عبور مطابقت ندارند",
   "Permissions": "مجوزها",
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
   "Please provide a role name, a description, and select the appropriate permissions.": "لطفاً نام نقش، توضیحات و مجوزهای مناسب را انتخاب کنید.",
-  "Please provide firstName, lastName, about, userName, password, and pub.": "Please provide firstName, lastName, about, userName, password, and pub.",
+  "Please provide firstName, lastName, about, userName, password, and pub.": "لطفاً firstName، lastName، about، userName، password و pub را وارد کنید.",
   "Please wait while we apply the necessary database migrations...": "لطفاً صبر کنید در حالی که مهاجرت‌های لازم پایگاه داده اعمال می‌شود...",
   "Preparing Database": "در حال آماده‌سازی پایگاه داده",
   "Previous": "قبلی",
   "Proceed to Defaults app Database": "ادامه به پایگاه داده پیش‌فرض برنامه",
   "Profile": "پروفایل",
   "Register": "ثبت‌نام",
-  "Registered successfully": "Registered successfully",
-  "Reply": "Reply",
+  "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
+  "Reply": "پاسخ",
   "Role Name": "نام نقش",
   "Role added successfully": "نقش با موفقیت افزوده شد",
-  "Role name is already taken. Please choose another one.": "نام نقش قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
+  "Role name is already taken. Please choose another one.": "نام نقش قبلاً انتخاب شده است. لطفاً نام دیگری انتخاب کنید.",
   "Roles": "نقش‌ها",
   "Roles added successfully": "نقش‌ها با موفقیت افزوده شدند",
   "Run Migrations": "اجرای مهاجرت‌ها",
   "Running Migrations": "در حال اجرای مهاجرت‌ها",
   "Save": "ذخیره",
   "Search": "جستجو",
-  "Send Comment": "Send Comment",
+  "Send Comment": "ارسال نظر",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
   "Start Installation": "شروع نصب",
@@ -164,11 +164,11 @@
   "User logged in successfully": "کاربر با موفقیت وارد شد",
   "User registered successfully": "کاربر با موفقیت ثبت شد",
   "Username": "نام کاربری",
-  "Username is already taken. Please choose another one.": "Username is already taken. Please choose another one.",
+  "Username is already taken. Please choose another one.": "این نام کاربری قبلاً استفاده شده است. لطفاً نام دیگری انتخاب کنید.",
   "Users": "کاربران",
   "Visual": "تصویری",
   "We are setting up the necessary configurations. This may take a moment...": "در حال راه‌اندازی تنظیمات لازم هستیم. ممکن است کمی طول بکشد...",
-  "Write Your Comment ...": "Write Your Comment ...",
+  "Write Your Comment ...": "نظر خود را بنویسید...",
   "Your Current Password": "رمز عبور فعلی شما",
   "Your application is successfully connected to the D1 database. You can now proceed with the installation process.": "برنامه شما با موفقیت به پایگاه داده D1 متصل شده است. اکنون می‌توانید به فرآیند نصب ادامه دهید.",
   "Your application is successfully installed, please update installed value in app.config.ts.": "برنامه شما با موفقیت نصب شده است، لطفاً مقدار installed را در app.config.ts به‌روزرسانی کنید.",
@@ -181,7 +181,7 @@
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
   "avatar": "آواتار",
-  "body": "body",
+  "body": "متن",
   "books": "کتاب‌ها",
   "build_name": "build_name",
   "cccc": "cccc",
@@ -191,24 +191,24 @@
   "div": "div",
   "email": "ایمیل",
   "firstName": "نام",
-  "ip_address": "ip_address",
+  "ip_address": "آدرس IP",
   "lastName": "نام خانوادگی",
-  "message": "message",
+  "message": "پیام",
   "more": "بیشتر",
   "name": "نام",
   "notes": "یادداشت‌ها",
   "password": "رمز عبور",
   "path": "مسیر",
-  "pending": "pending",
+  "pending": "در انتظار",
   "permissions": "مجوزها",
   "projects": "پروژه‌ها",
   "pub_key": "pub_key",
-  "published": "published",
+  "published": "منتشر شده",
   "route_path": "route_path",
   "status": "وضعیت",
   "title": "عنوان",
   "type": "نوع",
   "user_agent": "user_agent",
   "username": "نام کاربری",
-  "vue": "vue"
+  "vue": "ویو"
 }
