basic comment flow

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -30,6 +30,9 @@
   "Code": "Code",
   "Comment Approved": "Comment Approved",
   "Comment Denied": "Comment Denied",
+  "Comment must be at least 5 characters": "Comment must be at least 5 characters",
+  "Comment posted successfully": "Comment posted successfully",
+  "Comment posted successfully.": "Comment posted successfully.",
   "Comments": "Comments",
   "Confirm Password": "Confirm Password",
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
@@ -69,10 +72,13 @@
   "Failed to add role": "Failed to add role",
   "Failed to add roles to user": "Failed to add roles to user",
   "Failed to change password": "Failed to change password",
+  "Failed to fetch comments": "Failed to fetch comments",
+  "Failed to post comment": "Failed to post comment",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
   "Failed to retrieve the newly created user.": "Failed to retrieve the newly created user.",
   "Finish Installing": "Finish Installing",
   "First Name": "First Name",
+  "Forbidden: You do not have permission to post comments.": "Forbidden: You do not have permission to post comments.",
   "Heading 1": "Heading 1",
   "Heading 2": "Heading 2",
   "Heading 3": "Heading 3",
@@ -100,6 +106,7 @@
   "Manage Roles": "Manage Roles",
   "Manage Users": "Manage Users",
   "Missing required fields: firstName, lastName, about, userName, password, or pub": "Missing required fields: firstName, lastName, about, userName, password, or pub",
+  "Missing required fields: routePath and commentBody are required.": "Missing required fields: routePath and commentBody are required.",
   "Missing required fields: userName, password, pub": "Missing required fields: userName, password, pub",
   "Must be at least 2 characters": "Must be at least 2 characters",
   "Must be at least 3 characters": "Must be at least 3 characters",
@@ -159,6 +166,7 @@
   "UDropdownMenu": "UDropdownMenu",
   "UPagination": "UPagination",
   "UTable": "UTable",
+  "Unauthorized: Please log in to comment.": "Unauthorized: Please log in to comment.",
   "Update Profile": "Update Profile",
   "User Registration": "User Registration",
   "User logged in successfully": "User logged in successfully",
@@ -168,7 +176,7 @@
   "Users": "Users",
   "Visual": "Visual",
   "We are setting up the necessary configurations. This may take a moment...": "We are setting up the necessary configurations. This may take a moment...",
-  "Write Your Comment ...": "Write Your Comment ...",
+  "Write your comment...": "Write your comment...",
   "Your Current Password": "Your Current Password",
   "Your application is successfully connected to the D1 database. You can now proceed with the installation process.": "Your application is successfully connected to the D1 database. You can now proceed with the installation process.",
   "Your application is successfully installed, please update installed value in app.config.ts.": "Your application is successfully installed, please update installed value in app.config.ts.",
