--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -30,9 +30,9 @@
   "Code": "کد",
   "Comment Approved": "نظر تایید شد",
   "Comment Denied": "نظر رد شد",
-  "Comment must be at least 5 characters": "Comment must be at least 5 characters",
-  "Comment posted successfully": "Comment posted successfully",
-  "Comment posted successfully.": "Comment posted successfully.",
+  "Comment must be at least 5 characters": "نظر باید حداقل ۵ کاراکتر باشد",
+  "Comment posted successfully": "نظر با موفقیت ارسال شد",
+  "Comment posted successfully.": "نظر با موفقیت ارسال شد.",
   "Comments": "نظرات",
   "Confirm Password": "تأیید رمز عبور",
   "Confirm Password must be at least 6 characters": "رمز عبور تأیید شده باید حداقل ۶ کاراکتر باشد",
@@ -72,13 +72,13 @@
   "Failed to add role": "افزودن نقش با شکست مواجه شد",
   "Failed to add roles to user": "افزودن نقش‌ها به کاربر با شکست مواجه شد",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
-  "Failed to fetch comments": "Failed to fetch comments",
-  "Failed to post comment": "Failed to post comment",
+  "Failed to fetch comments": "دریافت نظرات با شکست مواجه شد",
+  "Failed to post comment": "ارسال نظر با شکست مواجه شد",
   "Failed to retrieve the newly created user": "دریافت کاربر تازه ایجاد شده با شکست مواجه شد",
   "Failed to retrieve the newly created user.": "دریافت کاربر تازه ایجاد شده با شکست مواجه شد.",
   "Finish Installing": "پایان نصب",
   "First Name": "نام",
-  "Forbidden: You do not have permission to post comments.": "Forbidden: You do not have permission to post comments.",
+  "Forbidden: You do not have permission to post comments.": "دسترسی غیرمجاز: شما اجازه ارسال نظر را ندارید.",
   "Heading 1": "عنوان ۱",
   "Heading 2": "عنوان ۲",
   "Heading 3": "عنوان ۳",
@@ -106,7 +106,7 @@
   "Manage Roles": "مدیریت نقش‌ها",
   "Manage Users": "مدیریت کاربران",
   "Missing required fields: firstName, lastName, about, userName, password, or pub": "فیلدهای ضروری: firstName، lastName، about، userName، password یا pub وارد نشده‌اند",
-  "Missing required fields: routePath and commentBody are required.": "Missing required fields: routePath and commentBody are required.",
+  "Missing required fields: routePath and commentBody are required.": "فیلدهای ضروری: مسیر و متن نظر الزامی هستند.",
   "Missing required fields: userName, password, pub": "فیلدهای ضروری: userName، password و pub وارد نشده‌اند",
   "Must be at least 2 characters": "باید حداقل 2 کاراکتر باشد",
   "Must be at least 3 characters": "باید حداقل 3 کاراکتر باشد",
@@ -166,7 +166,7 @@
   "UDropdownMenu": "منوی کشویی U",
   "UPagination": "صفحه‌بندی U",
   "UTable": "جدول U",
-  "Unauthorized: Please log in to comment.": "Unauthorized: Please log in to comment.",
+  "Unauthorized: Please log in to comment.": "دسترسی غیرمجاز: لطفاً برای ارسال نظر وارد شوید.",
   "Update Profile": "به‌روزرسانی پروفایل",
   "User Registration": "ثبت‌نام کاربر",
   "User logged in successfully": "کاربر با موفقیت وارد شد",
@@ -176,7 +176,7 @@
   "Users": "کاربران",
   "Visual": "تصویری",
   "We are setting up the necessary configurations. This may take a moment...": "در حال راه‌اندازی تنظیمات لازم هستیم. ممکن است کمی طول بکشد...",
-  "Write your comment...": "Write your comment...",
+  "Write your comment...": "نظر خود را بنویسید...",
   "Your Current Password": "رمز عبور فعلی شما",
   "Your application is successfully connected to the D1 database. You can now proceed with the installation process.": "برنامه شما با موفقیت به پایگاه داده D1 متصل شده است. اکنون می‌توانید به فرآیند نصب ادامه دهید.",
   "Your application is successfully installed, please update installed value in app.config.ts.": "برنامه شما با موفقیت نصب شده است، لطفاً مقدار installed را در app.config.ts به‌روزرسانی کنید.",
