--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -13,9 +13,9 @@
   "All pending migrations applied successfully.": "تمام مهاجرت‌های در انتظار با موفقیت اعمال شدند.",
   "An error occurred while setting up default database data: ": "هنگام راه‌اندازی داده‌های پیش‌فرض پایگاه داده خطایی رخ داد: ",
   "An unexpected error occurred. Please try again later.": "خطای غیرمنتظره‌ای رخ داد. لطفاً بعداً دوباره امتحان کنید.",
-  "App Cost Monitor": "App Cost Monitor",
+  "App Cost Monitor": "نمایش هزینه برنامه",
   "App Successfully installed": "برنامه با موفقیت نصب شد",
-  "App Visitor Monitor": "App Visitor Monitor",
+  "App Visitor Monitor": "نمایش بازدیدکننده برنامه",
   "Apply and validate your database schema migrations to set up all required tables.": "مهاجرت‌های طرح پایگاه داده را اعمال و اعتبارسنجی کنید تا جداول مورد نیاز راه‌اندازی شوند.",
   "Approve": "تأیید",
   "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
@@ -86,6 +86,7 @@
   "Hide password": "پنهان کردن رمز عبور",
   "Home": "خانه",
   "Horizontal Line": "خط افقی",
+  "If you believe this is an error, please contact the administrator.": "اگر فکر می‌کنید این خطا اشتباه است، لطفاً با مدیر سیستم تماس بگیرید.",
   "Import default configuration and sample data into your database.": "پیکربندی پیش‌فرض و داده‌های نمونه را به پایگاه داده خود وارد کنید.",
   "Initialize Database Schema": "راه‌اندازی طرح پایگاه داده",
   "Installation Complete": "نصب تکمیل شد",
@@ -125,7 +126,7 @@
   "Password changed successfully": "رمز عبور با موفقیت تغییر کرد",
   "Password must be at least 6 characters": "رمز عبور باید حداقل 6 کاراکتر باشد",
   "Passwords do not match": "رمزهای عبور مطابقت ندارند",
-  "Permission Denied": "Permission Denied",
+  "Permission Denied": "دسترسی غیرمجاز",
   "Permissions": "مجوزها",
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
@@ -139,6 +140,7 @@
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
   "Reply": "پاسخ",
+  "Return to Homepage": "بازگشت به صفحه اصلی",
   "Role Name": "نام نقش",
   "Role added successfully": "نقش با موفقیت افزوده شد",
   "Role name is already taken. Please choose another one.": "نام نقش قبلاً انتخاب شده است. لطفاً نام دیگری انتخاب کنید.",
@@ -179,6 +181,7 @@
   "Visual": "تصویری",
   "We are setting up the necessary configurations. This may take a moment...": "در حال راه‌اندازی تنظیمات لازم هستیم. ممکن است کمی طول بکشد...",
   "Write your comment...": "نظر خود را بنویسید...",
+  "You do not have the necessary permissions to access this page.": "شما دسترسی لازم برای مشاهده این صفحه را ندارید.",
   "Your Current Password": "رمز عبور فعلی شما",
   "Your application is successfully connected to the D1 database. You can now proceed with the installation process.": "برنامه شما با موفقیت به پایگاه داده D1 متصل شده است. اکنون می‌توانید به فرآیند نصب ادامه دهید.",
   "Your application is successfully installed, please update installed value in app.config.ts.": "برنامه شما با موفقیت نصب شده است، لطفاً مقدار installed را در app.config.ts به‌روزرسانی کنید.",
@@ -195,7 +198,7 @@
   "books": "کتاب‌ها",
   "build_name": "build_name",
   "cccc": "cccc",
-  "commentPosted": "commentPosted",
+  "commentPosted": "نظر ارسال شد",
   "description": "توضیحات",
   "device_name": "device_name",
   "displayName": "نام نمایشی",
@@ -220,5 +223,6 @@
   "title": "عنوان",
   "type": "نوع",
   "user_agent": "user_agent",
-  "username": "نام کاربری"
+  "username": "نام کاربری",
+  "vue": "ویو"
 }
