--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "$ Cost": "$ Cost",
   ".not-draggable": ".not-draggable",
   "About": "About",
   "Add New Role": "Add New Role",
@@ -13,9 +14,7 @@
   "All pending migrations applied successfully.": "All pending migrations applied successfully.",
   "An error occurred while setting up default database data: ": "An error occurred while setting up default database data: ",
   "An unexpected error occurred. Please try again later.": "An unexpected error occurred. Please try again later.",
-  "App Cost Monitor": "App Cost Monitor",
   "App Successfully installed": "App Successfully installed",
-  "App Visitor Monitor": "App Visitor Monitor",
   "Apply and validate your database schema migrations to set up all required tables.": "Apply and validate your database schema migrations to set up all required tables.",
   "Approve": "Approve",
   "At least one permission must be selected": "At least one permission must be selected",
@@ -41,6 +40,7 @@
   "Confirm password": "Confirm password",
   "Contact": "Contact",
   "Content saved successfully": "Content saved successfully",
+  "Cost": "Cost",
   "Create your first administrator account to manage your application.": "Create your first administrator account to manage your application.",
   "Current Password": "Current Password",
   "D1 Database Connection": "D1 Database Connection",
@@ -154,6 +154,7 @@
   "Settings": "Settings",
   "Show password": "Show password",
   "Start Installation": "Start Installation",
+  "Stats": "Stats",
   "Strikethrough": "Strikethrough",
   "Success": "Success",
   "Switch User": "Switch User",
@@ -178,6 +179,7 @@
   "Username": "Username",
   "Username is already taken. Please choose another one.": "Username is already taken. Please choose another one.",
   "Users": "Users",
+  "Visitors": "Visitors",
   "Visual": "Visual",
   "We are setting up the necessary configurations. This may take a moment...": "We are setting up the necessary configurations. This may take a moment...",
   "Write your comment...": "Write your comment...",
