--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,4 +1,5 @@
 {
+  "$ Cost": "$ هزینه",
   ".not-draggable": ".not-draggable",
   "About": "درباره",
   "Add New Role": "افزودن نقش جدید",
@@ -13,9 +14,7 @@
   "All pending migrations applied successfully.": "تمام مهاجرت‌های در انتظار با موفقیت اعمال شدند.",
   "An error occurred while setting up default database data: ": "هنگام راه‌اندازی داده‌های پیش‌فرض پایگاه داده خطایی رخ داد: ",
   "An unexpected error occurred. Please try again later.": "خطای غیرمنتظره‌ای رخ داد. لطفاً بعداً دوباره امتحان کنید.",
-  "App Cost Monitor": "نمایش هزینه برنامه",
   "App Successfully installed": "برنامه با موفقیت نصب شد",
-  "App Visitor Monitor": "نمایش بازدیدکننده برنامه",
   "Apply and validate your database schema migrations to set up all required tables.": "مهاجرت‌های طرح پایگاه داده را اعمال و اعتبارسنجی کنید تا جداول مورد نیاز راه‌اندازی شوند.",
   "Approve": "تأیید",
   "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
@@ -41,6 +40,7 @@
   "Confirm password": "تأیید رمز عبور",
   "Contact": "تماس",
   "Content saved successfully": "محتوا با موفقیت ذخیره شد",
+  "Cost": "هزینه",
   "Create your first administrator account to manage your application.": "اولین حساب مدیر را برای مدیریت برنامه خود ایجاد کنید.",
   "Current Password": "رمز عبور فعلی",
   "D1 Database Connection": "اتصال پایگاه داده D1",
@@ -154,6 +154,7 @@
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
   "Start Installation": "شروع نصب",
+  "Stats": "آمار",
   "Strikethrough": "خط میانی",
   "Success": "موفقیت‌آمیز",
   "Switch User": "تغییر کاربر",
@@ -178,6 +179,7 @@
   "Username": "نام کاربری",
   "Username is already taken. Please choose another one.": "این نام کاربری قبلاً استفاده شده است. لطفاً نام دیگری انتخاب کنید.",
   "Users": "کاربران",
+  "Visitors": "بازدیدکنندگان",
   "Visual": "تصویری",
   "We are setting up the necessary configurations. This may take a moment...": "در حال راه‌اندازی تنظیمات لازم هستیم. ممکن است کمی طول بکشد...",
   "Write your comment...": "نظر خود را بنویسید...",
