--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -22,6 +22,7 @@
   "Author:": "Author:",
   "Automatic migration failed.": "Automatic migration failed.",
   "Blockquote": "Blockquote",
+  "Blogs": "Blogs",
   "Bold": "Bold",
   "Builds": "Builds",
   "Bullet List": "Bullet List",
@@ -70,7 +71,6 @@
   "Error initializing default database data: ": "Error initializing default database data: ",
   "Ex: Developer Lead": "Ex: Developer Lead",
   "Exit": "Exit",
-  "Explorer": "Explorer",
   "Failed to add role": "Failed to add role",
   "Failed to add roles to user": "Failed to add roles to user",
   "Failed to change password": "Failed to change password",
@@ -116,7 +116,6 @@
   "No Database Connection": "No Database Connection",
   "No results found": "No results found",
   "Note Section": "Note Section",
-  "Notes": "Notes",
   "Noting is Here :(": "Noting is Here :(",
   "Ordered List": "Ordered List",
   "Page": "Page",
@@ -196,6 +195,7 @@
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "About",
   "avatar": "Avatar",
+  "blogs": "blogs",
   "body": "body",
   "books": "books",
   "build_name": "build_name",
@@ -212,7 +212,6 @@
   "message": "message",
   "more": "more",
   "name": "name",
-  "notes": "notes",
   "password": "password",
   "path": "path",
   "pending": "pending",
