--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -22,6 +22,7 @@
   "Author:": "نویسنده:",
   "Automatic migration failed.": "مهاجرت خودکار با شکست مواجه شد.",
   "Blockquote": "نقل قول",
+  "Blogs": "بلاگ",
   "Bold": "پررنگ",
   "Builds": "ساخت‌ها",
   "Bullet List": "لیست گلوله‌ای",
@@ -70,7 +71,6 @@
   "Error initializing default database data: ": "خطا در راه‌اندازی داده‌های پیش‌فرض پایگاه داده: ",
   "Ex: Developer Lead": "مثال: سرپرست توسعه",
   "Exit": "خروج",
-  "Explorer": "کاوشگر",
   "Failed to add role": "افزودن نقش با شکست مواجه شد",
   "Failed to add roles to user": "افزودن نقش‌ها به کاربر با شکست مواجه شد",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
@@ -116,7 +116,6 @@
   "No Database Connection": "اتصال پایگاه داده وجود ندارد",
   "No results found": "نتیجه‌ای یافت نشد",
   "Note Section": "بخش یادداشت",
-  "Notes": "یادداشت‌ها",
   "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
   "Ordered List": "لیست شماره‌دار",
   "Page": "صفحه",
@@ -196,6 +195,7 @@
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
   "avatar": "آواتار",
+  "blogs": "بلاگ",
   "body": "متن",
   "books": "کتاب‌ها",
   "build_name": "build_name",
@@ -212,7 +212,6 @@
   "message": "پیام",
   "more": "بیشتر",
   "name": "نام",
-  "notes": "یادداشت‌ها",
   "password": "رمز عبور",
   "path": "مسیر",
   "pending": "در انتظار",
