--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -22,7 +22,6 @@
   "Author:": "Author:",
   "Automatic migration failed.": "Automatic migration failed.",
   "Blockquote": "Blockquote",
-  "Blogs": "Blogs",
   "Bold": "Bold",
   "Builds": "Builds",
   "Bullet List": "Bullet List",
@@ -195,7 +194,6 @@
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "About",
   "avatar": "Avatar",
-  "blogs": "blogs",
   "body": "body",
   "books": "books",
   "build_name": "build_name",
@@ -209,9 +207,11 @@
   "firstName": "First Name",
   "ip_address": "ip_address",
   "lastName": "Last Name",
+  "logs": "logs",
   "message": "message",
   "more": "more",
   "name": "name",
+  "notes": "notes",
   "password": "password",
   "path": "path",
   "pending": "pending",
