--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -22,11 +22,10 @@
   "Author:": "نویسنده:",
   "Automatic migration failed.": "مهاجرت خودکار با شکست مواجه شد.",
   "Blockquote": "نقل قول",
-  "Blogs": "بلاگ",
   "Bold": "پررنگ",
   "Builds": "ساخت‌ها",
   "Bullet List": "لیست گلوله‌ای",
-  "Category:": "دسته‌بندی:",
+  "Category:": "Category:",
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
   "Code": "کد",
@@ -195,7 +194,6 @@
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
   "avatar": "آواتار",
-  "blogs": "بلاگ",
   "body": "متن",
   "books": "کتاب‌ها",
   "build_name": "build_name",
@@ -209,9 +207,11 @@
   "firstName": "نام",
   "ip_address": "آدرس IP",
   "lastName": "نام خانوادگی",
+  "logs": "بلاگ",
   "message": "پیام",
   "more": "بیشتر",
   "name": "نام",
+  "notes": "یادداشت",
   "password": "رمز عبور",
   "path": "مسیر",
   "pending": "در انتظار",
