--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -97,6 +97,7 @@
   "Italic": "Italic",
   "Items": "Items",
   "Last Name": "Last Name",
+  "Latest ": "Latest ",
   "Latest Incoming": "Latest Incoming",
   "Light Mode": "Light Mode",
   "Load Default Data": "Load Default Data",
