--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -97,6 +97,7 @@
   "Italic": "ایتالیک",
   "Items": "آیتم‌ها",
   "Last Name": "نام خانوادگی",
+  "Latest ": "آخرین ",
   "Latest Incoming": "آخرین ورودی‌ها",
   "Light Mode": "حالت روشن",
   "Load Default Data": "بارگذاری داده‌های پیش‌فرض",
