--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -25,7 +25,7 @@
   "Bold": "پررنگ",
   "Builds": "ساخت‌ها",
   "Bullet List": "لیست گلوله‌ای",
-  "Category:": "Category:",
+  "Category:": "دسته‌بندی:",
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
   "Code": "کد",
@@ -39,8 +39,8 @@
   "Confirm Password must be at least 6 characters": "رمز عبور تأیید شده باید حداقل ۶ کاراکتر باشد",
   "Confirm password": "تأیید رمز عبور",
   "Contact": "تماس",
+  "Content Toc": "فهرست محتوا",
   "Content saved successfully": "محتوا با موفقیت ذخیره شد",
-  "Cost": "هزینه",
   "Create your first administrator account to manage your application.": "اولین حساب مدیر را برای مدیریت برنامه خود ایجاد کنید.",
   "Current Password": "رمز عبور فعلی",
   "D1 Database Connection": "اتصال پایگاه داده D1",
@@ -104,7 +104,7 @@
   "Login": "ورود",
   "Login failed": "ورود ناموفق بود",
   "Login successful": "ورود موفقیت‌آمیز بود",
-  "Mamoochi Database  Installation": "نصب پایگاه داده ماموچی",
+  "Mamoochi Database  Installation": "نصب پایگاه داده مَموچی",
   "Manage Roles": "مدیریت نقش‌ها",
   "Manage Users": "مدیریت کاربران",
   "Missing required fields: firstName, lastName, about, userName, password, or pub": "فیلدهای ضروری: firstName، lastName، about، userName، password یا pub وارد نشده‌اند",
@@ -113,6 +113,7 @@
   "Must be at least 2 characters": "باید حداقل 2 کاراکتر باشد",
   "Must be at least 3 characters": "باید حداقل 3 کاراکتر باشد",
   "New Password": "رمز عبور جدید",
+  "Next": "بعدی",
   "No Database Connection": "اتصال پایگاه داده وجود ندارد",
   "No results found": "نتیجه‌ای یافت نشد",
   "Note Section": "بخش یادداشت",
@@ -223,6 +224,7 @@
   "route_path": "route_path",
   "status": "وضعیت",
   "title": "عنوان",
+  "tuts": "آموزش",
   "type": "نوع",
   "user_agent": "user_agent",
   "username": "نام کاربری",
