--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -39,8 +39,8 @@
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
   "Confirm password": "Confirm password",
   "Contact": "Contact",
+  "Content Toc": "Content Toc",
   "Content saved successfully": "Content saved successfully",
-  "Cost": "Cost",
   "Create your first administrator account to manage your application.": "Create your first administrator account to manage your application.",
   "Current Password": "Current Password",
   "D1 Database Connection": "D1 Database Connection",
@@ -113,6 +113,7 @@
   "Must be at least 2 characters": "Must be at least 2 characters",
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
+  "Next": "Next",
   "No Database Connection": "No Database Connection",
   "No results found": "No results found",
   "Note Section": "Note Section",
@@ -223,6 +224,7 @@
   "route_path": "route_path",
   "status": "status",
   "title": "title",
+  "tuts": "tuts",
   "type": "type",
   "user_agent": "user_agent",
   "username": "username",
