--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -223,8 +223,8 @@
   "route_path": "route_path",
   "status": "وضعیت",
   "title": "عنوان",
+  "tuts": "tuts",
   "type": "نوع",
   "user_agent": "user_agent",
-  "username": "نام کاربری",
-  "vue": "ویو"
+  "username": "نام کاربری"
 }
